--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # VITE_API_URL=https://mr3x-25-backend-production.up.railway.app/api
 VITE_API_URL=http://localhost:8081/api
+# VITE_API_URL=http://89.117.32.174:8081/api
 
 # API Client Mock Prefixes (for development fallback)
 VITE_API_CLIENT_SECRET_PREFIX=secret_
